--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,7 @@
 {
-  "name": "antiasalto-gps",
+  "name": "tracking-gps-app",
   "integrations": {
     "capacitor": {}
   },
-  "type": "angular-standalone"
+  "type": "angular"
 }
